# obs-livesplit-one

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  exports.def  obs.exp  obs.lib
.github/workflows/: before_deploy.sh  build_shared.sh  rust.yml
obs/: Cargo.toml
obs/src/: lib.rs
src/: auto_splitters.rs  autosplitters.rs  ffi.rs  ffi_types.rs  lib.rs  localization.rs
