[package]
name = "obs-livesplit-one"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["obs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
obs = { path = "obs" }
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["software-rendering", "font-loading"] }
log = { version = "0.4.6", features = ["serde"] }
lazy_static = "1.4.0"

# crates needed for the auto splitter management code to work as expected 
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
hyperx = { version = "1.4.0", optional = true }
quick-xml = { version = "0.29.0", features = ["serialize", "overlapped-lists"], optional = true }
serde = { version = "1.0.166", features = ["serde_derive"], optional = true }
open = { version = "5.0.0", optional = true }

[features]
default = ["auto-splitting"]
auto-splitting = ["livesplit-core/auto-splitting", "dep:reqwest", "dep:hyperx", "dep:quick-xml", "dep:serde", "dep:open"]

[profile.max-opt]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
