[package]
name = "obs-livesplit-one"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["obs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = [
    "software-rendering",
    "font-loading",
] }
log = { version = "0.4.6", features = ["serde"] }

# crates needed for the auto splitter management code to work as expected`
anyhow = { version = "1.0.75", optional = true }
open = { version = "5.0.0", optional = true }
percent-encoding = { version = "2.3.0", optional = true }
quick-xml = { version = "0.30.0", features = [
    "serialize",
    "overlapped-lists",
], optional = true }
reqwest = { version = "0.11.18", features = [
    "blocking",
    "rustls-tls-native-roots",
], default-features = false, optional = true }
serde = { version = "1.0.188", optional = true }
serde_derive = { version = "1.0.188", optional = true }

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
obs = { path = "obs" }

[features]
default = ["auto-splitting"]
auto-splitting = [
    "livesplit-core/auto-splitting",
    "dep:anyhow",
    "dep:open",
    "dep:percent-encoding",
    "dep:quick-xml",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_derive",
]

[profile.max-opt]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
