[package]
name = "obs-livesplit-one"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2021"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["obs"]

[lib]
crate-type = ["cdylib"]

[dependencies]
livesplit-core = { git = "https://github.com/AlexKnauth/livesplit-core", branch = "Refragg-2", features = [
    "software-rendering",
    "font-loading",
] }
log = { version = "0.4.6", features = ["serde", "release_max_level_info"] }
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"

# crates needed for the auto splitter management code to work as expected
anyhow = { version = "1.0.75", optional = true }
open = { version = "5.0.0", optional = true }
percent-encoding = { version = "2.3.0", optional = true }
quick-xml = { version = "0.38.3", features = [
    "serialize",
    "overlapped-lists",
], optional = true }
reqwest = { version = "0.12.1", features = [
    "blocking",
    "http2",
    "macos-system-configuration",
    "rustls-tls-native-roots",
], default-features = false, optional = true }
mime_guess = "2.0.4"

[target.'cfg(not(any(target_os = "macos", windows)))'.dependencies]
obs = { path = "obs" }

[target.'cfg(not(windows))'.dependencies]
shlex = "1.1.0"

[features]
default = ["auto-splitting"]
auto-splitting = [
    "livesplit-core/auto-splitting",
    "dep:anyhow",
    "dep:open",
    "dep:percent-encoding",
    "dep:quick-xml",
    "dep:reqwest",
]

[profile.max-opt]
inherits = "release"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.max-opt.build-override]
opt-level = 0
